war/src/main/webapp/css/style.css
/*
 * The MIT License
 * 
 * Copyright (c) 2004-2010, Sun Microsystems, Inc., Kohsuke Kawaguchi, Daniel Dyer, Stephen Connolly
 * 
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 * 
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 * 
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */
body {
  margin: 0;
  padding: 0;
  background: white;
}

body, table, form, input, td, th, p, textarea, select
{
  font-family: Verdana, Helvetica, sans serif;
  font-size: 11px;
}

FORM {
  margin: 0;
}

td {
  vertical-align: top;
}

dt {
  font-weight: bold;
}

.fixed-width {
  font-family: Courier, monospace;
}

.center {
  text-align: center;
}

.middle-align td, td.middle-align {
  vertical-align: middle;
}

.center-align td, td.center-align {
  text-align: center;
}

.no-wrap td, td.no-wrap {
  white-space: nowrap;
}

#main-table {
  padding: 0;
  border-collapse: collapse;
}

#top-panel {
  margin-bottom: 3pt;
  height: 34px;
  background: url(../images/topbar.png) repeat-x;
}
#top-panel a {
  text-decoration: none;
}

#main-panel {
  padding: 10px;
    padding-top: 0px;
}

#side-panel {
  padding: 4px;
  width: 220px;
}

#footer {
  text-align: right;
  font-size: 8pt;
  margin-top: 10em;
  padding: 10px;
  border-top: 1px solid #bbb;
}

#tasks {
  padding: 4px;
}

.skiplink {
    position: absolute;
    left: -20000px;
}

#shutdown-msg {
    font-weight: bold;
    color: white;
    background-color: #ef2929;
    text-align: center;
    margin-left: 2em;
    margin-right: 2em;
    margin-bottom: 0.5em;
    padding: 0.5em;
    -moz-border-radius: 0.5em;
}

a:link {
  text-decoration: underline;
  color: #204A87;
}

a:visited {
  text-decoration: underline;
  color: #5c3566;
}

a.lowkey:link {
  text-decoration: none;
  color: inherit;
}

a.lowkey:hover {
  text-decoration: underline;
  color: inherit;
}

a.lowkey:visited {
  text-decoration: none;
  color: inherit;
}

/* tip - anchors of class info */
a.tip {
  position:relative;
  z-index:24;
  text-decoration: underline;
}

a.tip:hover {
  z-index:25;
}

a.tip span {
  display: none
}

a.tip:hover span {
  display:block;
  position:absolute;
  top:2em;
  left:2em;
  width:400px;
  border:1px solid #bbbbbb;
  background-color:#fffff0;
  color:#000;
  text-align: left
}

img {
  vertical-align: middle;
  border: 0;
}

div.disabled {
    opacity : 0.4;
    filter: alpha(opacity=40); /* msie */
    background-color: #000;
}

table.tab {
  border-collapse: collapse;
}

td.selected_tab {
  vertical-align: middle;
  border: 1px #090 solid;
  background: #ffffff;
}

td.tab_filler {
  background: #ffffff;
  border-bottom: 1px #090 solid;
}

td.tab {
  vertical-align: middle;
  border: 1px #090 solid;
  background: #f0f0f0;
}

.dashboard td {
  padding: 4px 4px 4px 4px;
}

pre {/* see http://users.tkk.fi/tkarvine/pre-wrap-css3-mozilla-opera-ie.html */
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    margin: 0;
}

pre.console {
  overflow: auto;
}

.setting-leftspace {
  width: 2em;
}

.setting-name {
  white-space: nowrap;
}

.setting-main {
  width: 100%; /* try to make this column as big as possible. */
}
.setting-help {
  width: 16px;
}

.setting-input {
  width: 100%;
}

.setting-description {
  font-size: 0.8em;
  margin-top: 0;
  padding-top: 0;
}

/* div that looks like a hyperlink */
.pseudoLink {
  cursor: pointer;
}

.advancedLink {
  text-align: right;
}

.advancedBody {
  display: none;
}

.scm_info {
  width: 480px;
}

.build-row {
  padding: 3px 4px 3px 4px;
}

.build-keep {
  font-weight: bold;
}

.task-header {
  display: block;
  border-bottom: 1px #090 solid;
  font-weight: bold;
  font-size: 12pt;
}

.task {
  white-space: nowrap;
}

.subtasks {
  padding-left: 1em;
}

.main-table {
}

div.dashboard {
  width: 100%;
  clear:both;
}

.pane  {
  margin-top: 4px;
  white-space: nowrap;
}
.pane td {
  padding: 4px 4px 3px 4px;
}

table.pane {
  width: 100%;
  border-collapse: collapse;
  border: 1px #bbb solid;
}
table.pane > tbody > tr > td:last-child {
  border-right: 1px #bbb solid;
}

td.pane {
  border: 1px #bbb solid;
  padding: 3px 4px 3px 4px;
  vertical-align: middle;
}

td.pane-header {
  border: 1px #bbb solid;
  border-right: none;
  border-left: none;
  background-color: #f0f0f0;
  font-weight: bold;
  padding-right: 24px;
}

td.pane-header > div {
  position: relative;
  padding-right: 24px;
  width: 100%;
  height: 100%;
}

td.pane-header > div > a.collapse {
	float: right;
	position: absolute;
	right: 4px;
	top: -1px;
}

th.pane {
  border: 1px #bbb solid;
  font-weight: bold;
}

.bigtable tr {
  border: 1px solid #bbb;
  padding: 3px 4px 3px 4px;
}

.bigtable tr:hover {
  background-color: #f0f0f0;
}

.bigtable th {
  font-weight: bold;
  border: none;
  background-color: #f0f0f0;
  padding: 3px 4px 3px 4px;
}

.bigtable td {
  vertical-align: middle;
  padding: 3px 4px 3px 4px;
}
/* ... */

